new stuff regarding Score and Hole

--- a/GolfClub/BlazorApp/Pages/Score/AddScore.razor
+++ b/GolfClub/BlazorApp/Pages/Score/AddScore.razor
@@ -1,6 +1,10 @@
 ﻿@page "/AddScore"
-<h3>AddScore</h3>
+@using HttpClients.ClientInterfaces
+@inject IScoreService ScoreService
+@inject IHoleService HoleService
+
+
 
 @code {
-    
+
 }
