--- a/GolfClub/BlazorApp/Shared/NavMenu.razor
+++ b/GolfClub/BlazorApp/Shared/NavMenu.razor
@@ -40,8 +40,8 @@
                 </NavLink>
             </div>
             <div class="nav-item px-3">
-                <NavLink class="nav-link" href="AddScore">
-                    <span class="oi oi-plus" aria-hidden="true"></span> Add Score
+                <NavLink class="nav-link" href="CreateGame">
+                    <span class="oi oi-plus" aria-hidden="true"></span> Create Game
                 </NavLink>
             </div>
             <div class="nav-item px-3">
