--- a/GolfClub/BlazorApp/Pages/EmployeeResponsibilities/ManageMember.razor
+++ b/GolfClub/BlazorApp/Pages/EmployeeResponsibilities/ManageMember.razor
@@ -24,6 +24,7 @@ else
         <tr>
             <th>Name</th>
             <th>Username</th>
+            <th>Delete</th>
         </tr>
         </thead>
         @foreach (var user in users)
@@ -31,14 +32,42 @@ else
             <tr>
                 <td>@user.Name</td>
                 <td>@user.UserName</td>
+            <td>
+                <img src="img/delete.png" class="funnel" @onclick="(() => ConfirmActionDelete(@user.UserName))" alt="delete"/></td>
             </tr>
         }
     </table>
 }
+<div class="filter-bar">
+        <h2>Create</h2>
+        <div class="filters-container">
+            <img src="icons/@(doShowFilters ? "clear_" : "")add.png" class="funnel" @onclick="@(() => doShowFilters = !doShowFilters)" alt="Funnel"/>
+            @if (doShowFilters)
+            {
+                <div class="form-group field">
+                    <label>Name:</label>
+                    <input type="text" rows="1" cols="15" @bind="name"/>
+                </div>
+                <div class="form-group field">
+                    <label>Username:</label>
+                    <input type="text" rows="1" cols="5" @bind="username"/>
+                </div>
+                <div class="form-group field">
+                    <label>Password:</label>
+                    <input type="text" rows="1" cols="5" @bind="password"/>
+                </div>
+                <div class="button-row">
+                    
+                    <button @onclick="ConfirmActionCreate" class="acceptbtn">Create</button>
+                </div>
+            }
+        </div>
+    </div>
 
 @code {
     private IEnumerable<User>? users;
 
+    private bool doShowFilters = false;
     private string name;
     private string username;
     private string password;
@@ -91,7 +120,7 @@ else
         }
     }
     
-    private async Task ConfirmAction(string UserName)
+    private async Task ConfirmActionDelete(string UserName)
     {
         bool confirmed = await jsRuntime.InvokeAsync<bool>("confirmAction", "Are you sure you want to proceed?");
         
@@ -100,6 +129,29 @@ else
             try
             {
                 await DeleteMember(UserName);
+                await OnInitializedAsync();
+            }
+            catch (Exception e)
+            {
+                Console.WriteLine(e);
+                msg = e.Message;
+            }
+        }
+        else
+        {
+            await OnInitializedAsync();
+        }
+    }
+    
+    private async Task ConfirmActionCreate()
+    {
+        bool confirmed = await jsRuntime.InvokeAsync<bool>("confirmAction", "Are you sure you want to proceed?");
+        
+        if (confirmed)
+        {
+            try
+            {
+                await CreateMember();
                 await OnInitializedAsync();
             }
             catch (Exception e)
