--- a/GolfClub/BlazorApp/Pages/Game/CreateGame.razor.css
+++ b/GolfClub/BlazorApp/Pages/Game/CreateGame.razor.css
@@ -1,17 +1,52 @@
-﻿.addplayerbtn {
-    margin-left: 250px;
-    background-color: darkorange;
+﻿.deletebtn {
+    margin-left: 30px;
+    background-color: palevioletred;
+    width: 150px;
+    height: 40px;
+    font-size: small;
+    border-radius: 10px;
+}
+
+.createbtn {
+    background-color: greenyellow;
     width: 150px;
     height: 50px;
     font-size: large;
     border-radius: 10px;
 }
 
-.createbtn {
-    margin-left: 250px;
-    background-color: darkorange;
-    width: 150px;
-    height: 50px;
-    font-size: large;
-    border-radius: 10px;
+.headline_box {
+    display: flex;
+    justify-content: left;
+    margin-bottom: 20px;
+    margin-top: 15px;
 }
+
+.headline {
+    color: green;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+.golfball {
+    width: 40px;
+    height: 40px;
+    margin-top: -5px;
+}
+
+.note {
+    display: block;
+    font-size: small;
+    color: hotpink;
+}
+
+.select_smth {
+    margin-left: 25px;
+    width: 100px;
+    height: 30px;
+}
+
+.error {
+    color: red;
+}
+
