--- a/GolfClub/BlazorApp/Pages/EmployeeResponsibilities/ManageMember.razor
+++ b/GolfClub/BlazorApp/Pages/EmployeeResponsibilities/ManageMember.razor
@@ -33,7 +33,7 @@ else
                 <td>@user.Name</td>
                 <td>@user.UserName</td>
             <td>
-                <img src="img/delete.png" class="funnel" @onclick="(() => ConfirmActionDelete(@user.UserName))" alt="delete"/></td>
+                <img src="img/delete.png" class="funnel" @onclick="(() => ConfirmActionDelete(user.UserName))" alt="delete"/></td>
             </tr>
         }
     </table>
