--- a/GolfClub/BlazorApp/Pages/EmployeeResponsibilities/SpecificTournament.razor
+++ b/GolfClub/BlazorApp/Pages/EmployeeResponsibilities/SpecificTournament.razor
@@ -1,7 +1,9 @@
 ﻿@page "/ManageTournament/{tournamentName}"
 @using global::Shared.Model
 @using HttpClients.ClientInterfaces
+@using global::Shared.Dtos.TournamentDto
 @inject ITournamentService TournamentService
+@inject IUserService UserService
 @inject NavigationManager navMgr
 <h3>@tournamentName</h3>
 
@@ -16,6 +18,20 @@ else
     <p>@tournament.Name</p>
     <p>@tournament.StartDate - @tournament.EndDate</p>
     <p></p>
+    <h3>players:</h3>
+    foreach (var player in players)
+    {
+        <p>@player.Name</p>
+    }
+    
+    <select name="choosePlayer" id="choosePlayer" @onchange="SetSelectedPlayer">
+        <option selected="selected">choose:</option>
+        @foreach (var player in allPlayers)
+        {
+            <option value="@player.Name">@player.Name</option>
+        }
+    </select>
+    <button @onclick="AddPlayer">register player</button>
     
     <button @onclick="SwitchDeleteBool">Delete Tournament</button>
     @if (delete)
@@ -34,7 +50,10 @@ else
     public string tournamentName { get; set; }
 
     private bool delete = false;
+    private string chosenPlayerName ="";
     private Tournament tournament;
+    private ICollection<User> players = new List<User>();
+    private ICollection<User> allPlayers = new List<User>();
     private string msg;
 
     protected override async Task OnInitializedAsync()
@@ -42,7 +61,10 @@ else
         try
         {
             tournament = await TournamentService.GetTournamentByNameAsync(tournamentName);
-            
+            var playersInTournament = await TournamentService.GetAllTournamentPlayersAsync(tournamentName);
+            players = playersInTournament.OrderBy(p => p.UserName).ToList();
+            var allMembers = await UserService.GetAllUsersAsync();//propose changing to a method that only gets members
+            allPlayers = allMembers.OrderBy(p => p.Name).ToList();
         }
         catch (Exception e)
         {
@@ -60,5 +82,20 @@ else
     {
        await TournamentService.DeleteTournamentAsync(tournamentName);
         navMgr.NavigateTo($"/ManageTournament");
+    }
+
+    private async void AddPlayer()
+    {
+        RegisterPlayerDto update = new RegisterPlayerDto(chosenPlayerName, tournamentName);
+        await TournamentService.AddPlayerAsync(update);
+    }
+
+    private void SetSelectedPlayer(ChangeEventArgs e)
+    {
+        if (!string.IsNullOrEmpty(e.Value.ToString()))
+        {
+            string selectedPlayerName = e.Value.ToString();
+            chosenPlayerName = selectedPlayerName;
+        }
     }
 }
