--- a/GolfClub/BlazorApp/Pages/Score/AddScore.razor.css
+++ b/GolfClub/BlazorApp/Pages/Score/AddScore.razor.css
@@ -7,7 +7,8 @@
 }
 
 th {
-    padding: 10px;
+    text-align: center;
+    padding: 5px;
     background-color: paleturquoise;
     border: 1px solid black;
 }
@@ -16,25 +17,12 @@ table {
     border: 1px solid black;
 }
 
-.plus {
-    height: 20px;
-    width: 20px;
-    margin-left: 10px;
-}
-
 .hole_number {
-    width: 50px;
-}
-
-.add_player {
-    margin-top: 10px;
-    padding-left: 10px;
-    display: flex;
-    justify-content: left;
+    width: 35px;
 }
 
 .savebtn {
-    margin-left: 250px;
+    margin-top: 20px;
     background-color: darkorange;
     width: 150px;
     height: 50px;
