--- a/GolfClub/BlazorApp/Pages/Score/AddScore.razor
+++ b/GolfClub/BlazorApp/Pages/Score/AddScore.razor
@@ -7,36 +7,49 @@
 @inject IGameService GameService
 @inject IJSRuntime JsRuntime
 
+
 @if (activeGame != null)
 {
     <table>
         <thead>
         <tr>
-            <th>Hole</th>
+            <th class="first_row">Hole</th>
             @for (int i = 1; i <= 18; i++)
             {
-                <th>@i</th>
+                <th class="first_row">@i</th>
             }
         </tr>
         <tr>
-            <th>Par</th>
+            <th class="second_row">Par</th>
             @foreach (int par in pars)
             {
-                <th>@par</th>
+                <th class="second_row">@par</th>
             }
         </tr>
         </thead>
         <tbody>
-
         <tr>
-            <th>@loggedInMemberUsername</th>
-
-            @for (int i = 0; i < 18; i++)
-            {
-                <th>
-                    <input type="number" class="hole_number" placeholder="0" min="1" max="23" @bind="@scores[i]"/>
-                </th>
-            }
+            <th class="first_cell">@loggedInMemberUsername</th>
+            
+            <!-- Petra: Trust me, I tried with a for loop, but it just did not work so I gave up lol -->
+            <th><input type="number" class="hole_number" placeholder="0" min="1" max="23" @bind="@scores[0]"/></th>
+            <th><input type="number" class="hole_number" placeholder="0" min="1" max="23" @bind="@scores[1]"/></th>
+            <th><input type="number" class="hole_number" placeholder="0" min="1" max="23" @bind="@scores[2]"/></th>
+            <th><input type="number" class="hole_number" placeholder="0" min="1" max="23" @bind="@scores[3]"/></th>
+            <th><input type="number" class="hole_number" placeholder="0" min="1" max="23" @bind="@scores[4]"/></th>
+            <th><input type="number" class="hole_number" placeholder="0" min="1" max="23" @bind="@scores[5]"/></th>
+            <th><input type="number" class="hole_number" placeholder="0" min="1" max="23" @bind="@scores[6]"/></th>
+            <th><input type="number" class="hole_number" placeholder="0" min="1" max="23" @bind="@scores[7]"/></th>
+            <th><input type="number" class="hole_number" placeholder="0" min="1" max="23" @bind="@scores[8]"/></th>
+            <th><input type="number" class="hole_number" placeholder="0" min="1" max="23" @bind="@scores[9]"/></th>
+            <th><input type="number" class="hole_number" placeholder="0" min="1" max="23" @bind="@scores[10]"/></th>
+            <th><input type="number" class="hole_number" placeholder="0" min="1" max="23" @bind="@scores[11]"/></th>
+            <th><input type="number" class="hole_number" placeholder="0" min="1" max="23" @bind="@scores[12]"/></th>
+            <th><input type="number" class="hole_number" placeholder="0" min="1" max="23" @bind="@scores[13]"/></th>
+            <th><input type="number" class="hole_number" placeholder="0" min="1" max="23" @bind="@scores[14]"/></th>
+            <th><input type="number" class="hole_number" placeholder="0" min="1" max="23" @bind="@scores[15]"/></th>
+            <th><input type="number" class="hole_number" placeholder="0" min="1" max="23" @bind="@scores[16]"/></th>
+            <th><input type="number" class="hole_number" placeholder="0" min="1" max="23" @bind="@scores[17]"/></th>
         </tr>
 
         </tbody>
@@ -98,7 +111,7 @@
         for (int i = 0; i < 18; i++)
             pars.Add(random.Next(2, 8));
 
-
+        scores = new List<int>(18);
         for (int i = 1; i <= 18; i++)
             scores.Add(0);
     }
@@ -114,7 +127,8 @@
                 return;
             }
         }
-        
+
+        error = "";
         try
         {
             ScoreBasicDto dto = new ScoreBasicDto(loggedInMemberUsername, scores, activeGame!.Id);
@@ -129,23 +143,7 @@
         if (error.Equals(""))
             await JsRuntime.InvokeVoidAsync("alertAction", "Score submitted successfully");
         
-    }
-
-    /// Whenever there is a change in the stroke number-picker, the value gets assigned to "strokes" global variable
-    private void ChangeStrokes(ChangeEventArgs e)
-    {
-        strokes = int.Parse(e.Value.ToString());
-        for (int i = 0; i < 18; i++)
-            Console.WriteLine($"Score for hole {i+1}: {scores[i]}");
-        }
-
-    /// "strokes" global variable holds the last picked value in the last stroke number-picker
-    /// This method is ran right after ChangeStrokes(ChangeEventArgs e),
-    /// and it assigns the "strokes" variable's value to the List<int> "scores"
-    /// under the corresponding index
-    private void ChangePlayersStrokes(int indexOfScore)
-    {
-        scores[indexOfScore] = strokes;
-        strokes = 0;
+        activeGame = null;
+        await OnInitializedAsync();
     }
 }
