--- a/GolfClub/BlazorApp/Pages/Score/AddScore.razor.css
+++ b/GolfClub/BlazorApp/Pages/Score/AddScore.razor.css
@@ -8,8 +8,6 @@
 
 th {
     text-align: center;
-    padding: 5px;
-    background-color: paleturquoise;
     border: 1px solid black;
 }
 
@@ -18,14 +16,31 @@ table {
 }
 
 .hole_number {
-    width: 35px;
+    width: 50px;
+    height: 35px;
 }
 
 .savebtn {
+    margin-left: 25px;
     margin-top: 20px;
     background-color: darkorange;
     width: 150px;
     height: 50px;
     font-size: large;
     border-radius: 10px;
+}
+
+.first_cell {
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.first_row {
+    padding: 10px 20px;
+    background-color: forestgreen;
+}
+
+.second_row {
+    padding: 10px 20px;
+    background-color: lightgreen;
 }
