Changes related to Manage Score Use Case

--- a/GolfClub/BlazorApp/Pages/Score/ManageScore.razor
+++ b/GolfClub/BlazorApp/Pages/Score/ManageScore.razor
@@ -1,6 +1,7 @@
-﻿@page "/ManageScore"
-<h3>ManageScore</h3>
+﻿@page "/ManageScore/{id:int}"
 
 @code {
+    [Parameter] 
+    public int Id { get; set; }
     
 }
