--- a/GolfClub/BlazorApp/Shared/NavMenu.razor
+++ b/GolfClub/BlazorApp/Shared/NavMenu.razor
@@ -45,8 +45,8 @@
                 </NavLink>
             </div>
             <div class="nav-item px-3">
-                <NavLink class="nav-link" href="ManageScore">
-                    <span class="oi oi-pencil" aria-hidden="true"></span> Manage Score
+                <NavLink class="nav-link" href="ManageScores">
+                    <span class="oi oi-pencil" aria-hidden="true"></span> Manage Scores
                 </NavLink>
             </div>
             <div class="nav-item px-3">
